force-app/main/default/objects/MediationPossibleArea__c/MediationPossibleArea__c.object-meta.xml
<CustomObject>
    <label>紹介可能エリア</label>
    <nameField>
        <label>紹介可能エリア名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>