force-app/main/default/objects/MediationPossibleArea__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>紹介可能エリア</relationshipLabel>
    <relationshipName>MediationPossibleArea</relationshipName>
    <type>Lookup</type>
</CustomField>