force-app/main/default/objects/MediationPossibleArea__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>District__r.City__c</formula>
    <label>市区町村</label>
    <type>Text</type>
</CustomField>