force-app/main/default/objects/MediationPossibleArea__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>地区</label>
    <referenceTo>District__c</referenceTo>
    <relationshipLabel>紹介可能エリア</relationshipLabel>
    <relationshipName>District</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>